# compliment_of_the_day

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compliment.py  config.yaml  database.py  fly.toml  main.py  news.py  pyproject.toml  setup.py  test_compliment.py  tg_bot.py  translations.py
bot/: __init__.py  handlers.py  jobs.py  main.py  utils.py
db/: __init__.py  manager.py  migrations.py  models.py
translations/: en.yaml  ru.yaml
