[project]
name = "compliment-of-the-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]>=22.4",
]
